--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
       <li><a routerLink="/productos">Productos</a></li>
       <li><a routerLink="/precios">Lista de precios</a></li>
       <li><a routerLink="/clientes">Clientes</a></li>
-      <!--<li><a routerLink="/reporte">Reporte</a></li>-->
+    <li><a routerLink="/reporte">Reporte</a></li>
     </ul>
   </div>
   </div>
